--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Bonomo Sports Pools - Create and join sports pools with ease!" />
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="Bonomo Sports Pools" />
+    <meta property="og:description" content="Join the fun at Bonomo Sports Pools! Create and manage sports pools for NFL, NBA, MLB, and more." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://bonomosportspools.web.app" />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
     <title>Bonomo Sports Pools</title>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
@@ -14,7 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
-    <!-- Load polyfills before the main bundle (remove if not needed for your browser support) -->
+    <!-- Load polyfills before the main bundle -->
     <script src="%PUBLIC_URL%/polyfills.js"></script>
   </head>
   <body>
